# drones

./: .gitignore  .rosinstall  README.md  installation16.md  installation18.md  installation20.md  mavros_px4_sitl_installation.sh
cl_drone_teleop/: CMakeLists.txt  package.xml
cl_drone_teleop/launch/: drone_teleop.launch
cl_drone_teleop/src/: cl_drone_teleop.py
drone_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
drone_assets/models/box/: model.config  model.sdf
drone_assets/models/custom_box_target_green/: model.sdf
drone_assets/models/custom_box_target_red/: model.sdf
drone_assets/models/cylinder1/: model.sdf
drone_assets/models/cylinder2/: model.sdf
drone_assets/models/iris/: iris.sdf
drone_assets/models/iris_dual_cam/: iris_dual_cam.sdf
drone_assets/models/iris_red/: iris_red.sdf
drone_assets/models/logo_JdeRobot/: model.config  model.sdf
drone_assets/models/logo_JdeRobot/materials/scripts/: logo_JdeRobot.material
drone_assets/models/package_box/: model.config  model.sdf
drone_assets/models/package_box/materials/scripts/: package_box.material
drone_assets/models/simple_labyrinth_green/: model.sdf
drone_assets/models/target_beacon_pd/: model.config  model.sdf
drone_assets/models/target_beacon_pd/materials/scripts/: target_beacon_pd.material
drone_assets/models/typhoon_h480_dual_cam/: typhoon_h480_dual_cam.sdf
drone_assets/models/warehouse_pd/: model.config  model.sdf
drone_assets/urdf/: marker0.material  turtlebot3_waffle_pi_colored_plate.xacro
drone_circuit_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
drone_circuit_assets/launch/: many_curves_drone.launch  montmelo_line_drone.launch  montreal_line_drone.launch  nurburgring_line_drone.launch  simple_circuit_drone.launch
drone_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
drone_wrapper/launch/: basic_config.yml  drone_teleop_wrapper.launch  mavros_px4_sitl.launch  single_vehicle_spawn_sdf.launch
drone_wrapper/scripts/: load_parameters  play_python_code
drone_wrapper/src/: gui_wrapper_connector.py  play_python_code.sh
drone_wrapper/src/drone_wrapper/: __init__.py  drone_wrapper.py  drone_wrapper_class.py
drone_wrapper/test/: dw_frames.py  test.py  vel_test.py
jderobot_drones/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_driver/launch/: rotors_driver.launch  rotors_wrapper.launch
rotors_driver/scripts/: rotors_land  rotors_takeoff
rotors_driver/src/: rotors_driver_node.py
rotors_driver/test/: test_pubs.py  test_rotors_driver.py
rqt_drone_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml  plugin_cam_viewer.xml  plugin_pos_teleop.xml  plugin_vel_teleop.xml  setup.py
rqt_drone_teleop/launch/: drone_teleop.launch  rqt_drone_teleop.launch
rqt_drone_teleop/perspectives/: DroneTeleop.perspective  drone_ground_teleop_vel_cam.perspective  drone_teleop_all.perspective  drone_teleop_cam.perspective  drone_teleop_pos.perspective  drone_teleop_pos_cam.perspective  drone_teleop_vel.perspective  drone_teleop_vel_cam.perspective  drone_teleop_vel_pos.perspective  ground_robot_teleop.perspective
rqt_drone_teleop/resource/: CamViewer.ui  DroneTeleop.ui  DroneTeleop_info.ui  PositionTeleop.ui  VelocityTeleop.ui
rqt_drone_teleop/scripts/: rqt_cam_viewer  rqt_drone_teleop  rqt_pos_teleop  rqt_vel_teleop
rqt_drone_teleop/src/rqt_cam_viewer/: cam_viewer.py
rqt_drone_teleop/src/rqt_drone_teleop/: drone_teleop.py  teleopWidget.py
rqt_drone_teleop/src/rqt_pos_teleop/: pos_teleop.py  sensorsWidget.py
rqt_drone_teleop/src/rqt_vel_teleop/: teleopWidget.py  vel_teleop.py
rqt_follow_road/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_follow_road/launch/: follow_road.launch
rqt_follow_road/perspectives/: FollowRoad.perspective
rqt_follow_road/resource/: FollowRoad.ui
rqt_follow_road/scripts/: rqt_follow_road
rqt_follow_road/src/rqt_follow_road/: follow_road.py  teleopWidget.py
rqt_follow_road/worlds/: iris_1_roadtexturesROS.world
rqt_ground_robot_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_ground_robot_teleop/resource/: GroundRobotTeleop.ui
rqt_ground_robot_teleop/scripts/: rqt_ground_robot_teleop
rqt_ground_robot_teleop/src/rqt_ground_robot_teleop/: ground_robot_teleop.py  teleopWidget.py
tello_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
tello_driver/launch/: tello_code.launch  tello_driver.launch  tello_rqt.launch  tello_wrapper.launch
tello_driver/scripts/: tello_quit  tello_takeoff
tello_driver/src/: tello_driver_node.py
tello_driver/test/: my_solution.py  test_tello_driver.py  test_wrapper.py
