<?xml version="1.0"?>
<package format="2">
  <name>cl_drone_teleop</name>
  <version>0.0.0</version>
  <description>Command Line tool to teleop a drone like using a standard remote controller</description>

  <maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
  <author email="pedroariasperez96@gmail.com">Pedro Arias</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>drone_wrapper</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
