<?xml version="1.0"?>
<package format="3">
	<name>drone_wrapper</name>
	<version>1.4.2</version>
	<description>The drone_wrapper package</description>

	<maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

	<license>MIT</license>

	<!-- <url type="website">To be added soon</url> -->

	<buildtool_depend>catkin</buildtool_depend>
	<depend>cv_bridge</depend>
	<depend>geometry_msgs</depend>
	<depend>mavros_msgs</depend>
	<depend>rospy</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>mavros</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
