<?xml version="1.0"?>
<package format="2">
  <name>jderobot_drones</name>
  <version>1.3.7</version>
  <description>The jderobot_drones stack</description>

  <maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
  <author email="pedroariasperez96@gmail.com">Pedro Arias</author>

  <license>MIT</license>

  <url type="website">https://github.com/JdeRobot/drones</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>drone_wrapper</exec_depend>
  <exec_depend>rqt_drone_teleop</exec_depend>
  <exec_depend>rqt_ground_robot_teleop</exec_depend>
  <exec_depend>drone_assets</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
