<?xml version="1.0"?>
<package format="2">
	<name>rqt_drone_teleop</name>
	<version>0.0.1</version>
	<description>A common drone teleop interface for all drone exercises in the JdeRobot Robotics Academy</description>

	<maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>rqt_gui</exec_depend>
	<exec_depend>rqt_gui_py</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>python-rospkg</exec_depend>
	<exec_depend>roslib</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml"/>
	</export>
</package>
