<?xml version="1.0"?>
<package format="3">
	<name>rqt_drone_teleop</name>
	<version>1.4.2</version>
	<description>A common drone teleop interface for all drone exercises in the JdeRobot Robotics Academy</description>

	<maintainer email="pedroariasperez96@gmail.com">Pedro Arias</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>
	<author>Pedro Arias</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>geometry_msgs</depend>
	<depend>rospy</depend>
	<depend>rqt_gui</depend>
	<depend>rqt_gui_py</depend>
	<depend>sensor_msgs</depend>
	<depend>python3-rospkg</depend>
	<depend>roslib</depend>
	<depend>drone_wrapper</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin_vel_teleop.xml"/>
		<rqt_gui plugin="${prefix}/plugin_cam_viewer.xml"/>
		<rqt_gui plugin="${prefix}/plugin_pos_teleop.xml"/>
	</export>
</package>
