<?xml version="1.0"?>
<package format="2">
	<name>rqt_follow_road</name>
	<version>0.0.1</version>
	<description>The rqt_follow_road package</description>

	<maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>rqt_gui</exec_depend>
	<exec_depend>rqt_gui_py</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>python-rospkg</exec_depend>
	<exec_depend>roslib</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml"/>
	</export>
</package>
