<?xml version="1.0"?>
<package format="2">
	<name>rqt_ground_robot_teleop</name>
	<version>0.0.1</version>
	<description>A common ground robot teleop interface for all ground robot exercises in the JdeRobot Robotics Academy</description>

	<maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
	<author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>geometry_msgs</depend>
	<depend>rospy</depend>
	<depend>rqt_gui</depend>
	<depend>rqt_gui_py</depend>
	<depend>sensor_msgs</depend>
	<depend>python-rospkg</depend>
	<depend>roslib</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml"/>
	</export>
</package>
